# RVC_Test

./: .gitignore  CMakeLists.txt  sonar-project.properties  vcpkg.json
.github/workflows/: ci.yml
src/: main.cpp
tests/: test_main.cpp
